# omnilens

./: .gitignore  README.md  STATUS.md  pyproject.toml
.github/workflows/: tests.yml
.omc/sessions/: 1ceecde4-b14c-4362-b0bb-23f25acb613f.json  f0626353-c8fa-46e8-bc22-1152c228752a.json
.omc/state/: agent-replay-f0626353-c8fa-46e8-bc22-1152c228752a.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
docs/: guide.md
examples/: non_transformer_models.py
omnilens/: __init__.py
omnilens/core/: attention_wrap.py  block_wrap.py  cache.py  tapped_model.py
omnilens/methods/: activation_patching.py  logit_lens.py  probe.py  sae.py  steering.py  transcoder.py  xray.py
omnilens/registry/: auto_detect.py  loader.py
omnilens/registry/architectures/: bloom.yaml  deepseek_v2.yaml  deepseek_v3.yaml  falcon.yaml  gemma.yaml  gemma2.yaml  gemma3.yaml  gpt2.yaml  gpt_neox.yaml  gptj.yaml  kimi_k2.yaml  llama.yaml  mamba.yaml  mistral.yaml  opt.yaml  phi.yaml  phi3.yaml  qwen2.yaml  qwen3.yaml  rwkv.yaml  stablelm.yaml
omnilens/viz/: __init__.py  plots.py
omnilens/viz/live/: __init__.py  config.py  server.py  visualizer.py
omnilens/viz/live/api/: routes_analysis.py  routes_graph.py  routes_metrics.py  ws_stream.py
omnilens/viz/live/engine/: graph_compressor.py  graph_extractor.py  hook_manager.py  metric_collector.py  routing_analyzer.py  tensor_tracker.py
omnilens/viz/live/frontend/: package-lock.json  package.json  vite.config.ts
omnilens/viz/live/frontend/src/: App.tsx
omnilens/viz/live/frontend/src/components/: FlowRiver.tsx  GraphCanvas.tsx  MetricOverlay.tsx  NodeTooltip.tsx
omnilens/viz/live/frontend/src/hooks/: useGraphData.ts  useMetricStream.ts
omnilens/viz/live/frontend/src/lib/: color-mapping.ts  (+2 more)
omnilens/viz/live/models/: graph_schema.py  metric_schema.py  session_schema.py
tests/: test_probe.py  test_sae.py  test_steering.py  test_tapped_model.py  test_transcoder.py
(+2 files in other folders)
