[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "omnilens"
version = "0.1.0"
description = "Universal mechanistic interpretability primitives for any PyTorch model"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["omnilens*"]

[tool.setuptools.package-data]
"omnilens.registry.architectures" = ["*.yaml"]
