[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnilens"
version = "0.1.3"
description = "Universal mechanistic interpretability primitives for any PyTorch model"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mechanistic-interpretability", "transformers", "pytorch", "sparse-autoencoder", "activation-patching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
]
live = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["omnilens*"]

[tool.setuptools.package-data]
"omnilens.registry.architectures" = ["*.yaml"]
"omnilens.viz.live.frontend" = ["dist/**/*"]
